--- a/po/cs.po
+++ b/po/cs.po
@@ -1,10 +1,10 @@
 # 
 # Translators:
-# Vít Stanislav <slaweet@seznam.cz>, 2015
+# Vít Stanislav <slaweet@seznam.cz>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: proso-apps-js\n"
-"PO-Revision-Date: 2015-09-12 17:59+0000\n"
+"PO-Revision-Date: 2016-02-25 18:06+0000\n"
 "Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
 "Language-Team: Czech (http://www.transifex.com/adaptive-learning/proso-apps-js/language/cs/)\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,6 +18,7 @@ msgstr "Tak akorát"
 
 #: templates/feedback-comment/comment.html:21
 #: templates/feedback-rating/rating.html:26
+#: templates/user-questions/user_questions_banner.html:7
 msgid "Close"
 msgstr "Zavřít"
 
@@ -52,6 +53,14 @@ msgstr "Heslo znovu"
 msgid "Registration was successful. You can continue to use the application."
 msgstr "Registrace proběhla úspěšně. Můžete pokračovat v používání aplikace."
 
+#: templates/user-questions/user_questions_banner.html:36
+msgid "Save"
+msgstr "Uložit"
+
+#: templates/user-questions/user_questions_banner.html:35
+msgid "Saving..."
+msgstr "Ukládání..."
+
 #: templates/feedback-comment/comment.html:18
 msgid "Send"
 msgstr "Odeslat"
@@ -79,6 +88,10 @@ msgstr "Děkujeme Vám za zaslané informace. Feedback od uživatelů je k nezap
 #: src/feedback-rating/rating.js:37
 msgid "Thank you for your rating."
 msgstr "Děkujeme za vaše hodnocení."
+
+#: templates/user-questions/user_questions_banner.html:42
+msgid "Thank you for your response."
+msgstr "Děkujeme za odpověď."
 
 #: templates/feedback-rating/rating.html:14
 msgid "Too difficult"
